Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjObject.quorum
class Main
    action Main
        Object v
        Test(v)
    end

    action Test(Text var)
    end
end
